apps/homeassistant/https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeassistant-https-redirect
  namespace: homeassistant
spec:
  redirectScheme:
    scheme: https
    permanent: true
