apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
  - name: http
    port: 8123
    targetPort: 8123
